fix(a11y) Add back textarea, and make shift+enter still work

--- a/src/components/LogViewer/QueryBar.scss
+++ b/src/components/LogViewer/QueryBar.scss
@@ -48,7 +48,6 @@
     background-color: rgba(0, 0, 0, 0);
     caret-color: black;
     color: rgba(0, 0, 0, 0);
-    padding-top: 0;
 
     &:focus {
       outline: none;
